# Agentic_developer_framework

./: .gitignore  README.md  WALKTHROUGH.md  forge.example.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: custom_agents.py
forge/: __init__.py  cli.py
forge/agents/: __init__.py  base.py  coder.py  custom_agents.py  fixer.py  planner.py  reporter.py  reviewer.py  tester.py
forge/core/: __init__.py  config.py  edits.py  llm.py  orchestrator.py  parallel.py  provider_defaults.py  providers.py  shell.py  state.py  workspaces.py
tests/: test_cli.py  test_config.py  test_e2e_fixture.py  test_edits.py  test_llm.py  test_parallel.py  test_parallel_e2e.py  test_providers.py  test_shell.py  test_state.py  test_workspaces.py
tests/fixtures/counter_buggy/counter_app/: __init__.py  counter.py
tests/fixtures/mock_responses/: counter_fix.json  parallel_build.json
