[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-agents"
version = "0.1.0"
description = "Experimental multi-agent developer pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.30.0",
    "click>=8.1",
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools.packages.find]
include = ["forge*"]
